2008-05-15  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Use Request::METHOD_GET
	* src/RequestGroup.cc (createNextCommandWithAdj)

2008-05-15  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Defined "OK", "ERR", "INPR" as static const std::string
	* src/RequestGroupMan.cc (showDownloadResults)

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Defined default client used in extended handshake as static const
	std::string
	* src/DefaultBtInteractive.cc (addHandshakeExtendedMessageToQueue)

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Defined AUTH_HEADER, PROXY_AUTH_HEADER as static const std::string
	* src/HttpConnection.cc (eraseConfidentialInfo)

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Defined default ftp user and password as static const std::string
	* src/AuthConfigFactory.cc
	* src/AuthConfigFactory.h

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Defined strings used in netrc as static const std::string
	* src/Netrc.cc
	* src/Netrc.h

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Defined HTTP status as static const std::string
	* src/AbstractProxyResponseCommand.cc
	* src/HttpHeader.cc
	* src/HttpHeader.h
	* src/HttpResponse.cc
	* src/HttpResponseCommand.cc
	* src/HttpSkipResponseCommand.cc

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Defined "\r\n", "A", "I" as static const std::string
	* src/A2STR.cc
	* src/A2STR.h
	* src/FtpConnection.cc
	* src/FtpConnection.h

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added COLON_C(".") and used it in Request::parseUrl()
	* src/A2STR.cc
	* src/A2STR.h
	* src/Request.cc (parseUrl)

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Changed the type of padName from `const std::string&' to `const char*'.
	* src/MSEHandshake.cc (verifyPadLength)

2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Defined "sha1" as static const std::string.